--- a/frontend/static/profile_style.css
+++ b/frontend/static/profile_style.css
@@ -196,6 +196,25 @@ img {
 	animation: div_slide_left 0.2s ease-in-out;
 }
 
+.match_div{
+	height:80%;
+	width: 95%;
+	margin: 10px:
+	padding: 10px;
+	align-items: center;
+	text-align: center;
+	overflow:scroll;
+}
+::-webkit-scrollbar{
+    width: 6px;
+	height: 100%;
+}
+::-webkit-scrollbar-thumb{
+	background: transparent;
+    background-clip: content-box; 
+    border-radius: 50px;
+    border: 6px #e2dad0 solid;
+}
 .history_bloc_switched{
 	position: absolute;
 	padding: 20px;
@@ -582,7 +601,8 @@ img {
 .history_title_bloc{
 	display: flex;
 	height: 50px;
-	position: absolute;
+	/* position: absolute; */
+	margin-bottom: 20px;
 	top: 40px;
 }
 
